Rollback von KI DecisionService