@@ -94,7 +94,7 @@ public final class AIDecisionService {
         }
 
         if (bestPositions.size() == 1) {
-            return bestPositions.getFirst();
+            return bestPositions.get(0);
         } else {
             List<Integer> tieWeights = createTieWeights(bestPositions.size(), TIE_WEIGHT_VALUE);
             int selectedIndex = weightedRandomSelector.selectWeightedRandom(tieWeights);
@@ -111,6 +111,7 @@ public final class AIDecisionService {
         Position kingPosition = game.getKingPosition(currentTeam);
 
         List<Position> candidates = game.boardView().getSurroundingPositions(kingPosition);
+
         if (candidates.isEmpty()) {
             return null; // No valid placement positions available
         }
@@ -216,8 +217,8 @@ public final class AIDecisionService {
     private int scorePlacementPosition(Position candidate, TeamID currentTeam) {
         Position enemyKingPosition = game.getKingPosition(game.getEnemyTeamID());
         int steps = manhattanDistance(candidate, enemyKingPosition);
-        int enemies = countOrthogonalEntitiesFromTeam(candidate, game.getEnemyTeamID());
-        int fellows = countOrthogonalEntitiesFromTeam(candidate, currentTeam);
+        int enemies = countOrthogonalEntitiesFromTeam(candidate, game.getEnemyTeamID(), true);
+        int fellows = countOrthogonalEntitiesFromTeam(candidate, currentTeam, true);
         return -steps + PLACEMENT_ENEMY_WEIGHT_FACTOR * enemies - fellows;
     }
     private int manhattanDistance(Position a, Position b) {
@@ -236,13 +237,13 @@ public final class AIDecisionService {
         }
         return count;
     }
-    private int countOrthogonalEntitiesFromTeam(Position center, TeamID team) {
+    private int countOrthogonalEntitiesFromTeam(Position center, TeamID team, boolean includeKing) {
         int count = 0;
 
         for (Position neighbor : game.boardView().getOrthogonalNeighbors(center)) {
             BoardEntity occupant = game.boardView().getOccupant(neighbor);
             if (occupant != null && occupant.getOwner().equals(team)) {
-                if (!occupant.isFarmerKing()) {
+                if (includeKing || !occupant.isFarmerKing()) {
                     count++;
                 }
             }
@@ -290,7 +291,7 @@ public final class AIDecisionService {
         List<ActionScore> actionScores = new ArrayList<>();
 
         for (Position target : game.boardView().getOrthogonalNeighbors(source)) {
-            addDirectionalAction(actionScores, target, unit, team);
+            addDirectionalAction(actionScores, source, target, unit, team);
         }
 
         int blockScore = scoreBlockAction(source, unit, team);
@@ -301,7 +302,7 @@ public final class AIDecisionService {
 
         return actionScores;
     }
-    private void addDirectionalAction(List<ActionScore> actionScores, Position target, Unit unit, TeamID currentTeam) {
+    private void addDirectionalAction(List<ActionScore> actionScores, Position source, Position target, Unit unit, TeamID currentTeam) {
         if (!game.boardView().isValidPosition(target)) {
             return;
         }
@@ -309,15 +310,15 @@ public final class AIDecisionService {
         if (targetEntity != null && targetEntity.isFarmerKing() && targetEntity.getOwner().equals(currentTeam)) {
             return;
         }
-        int score = scoreDirectionalAction(target, unit, currentTeam, targetEntity);
+        int score = scoreDirectionalAction(source, target, unit, currentTeam, targetEntity);
         actionScores.add(new ActionScore(UnitActionType.MOVE, target, score));
     }
-    //TargetEntity kann leer sein, eigenes Team, oder Gegner, ABER: nicht eigener König!
-    private int scoreDirectionalAction(Position target, Unit unit, TeamID currentTeam, BoardEntity targetEntity) {
+    //TargetEntity kann leer sein, eigenes Team, oder Gegner, ABER: Nicht eigener König!
+    private int scoreDirectionalAction(Position source, Position target, Unit unit, TeamID currentTeam, BoardEntity targetEntity) {
         if (targetEntity == null) {
             Position enemyKingPosition = game.getKingPosition(game.getEnemyTeamID());
             int steps = manhattanDistance(target, enemyKingPosition);
-            int enemies = countOrthogonalEntitiesFromTeam(target, game.getEnemyTeamID());
+            int enemies = countOrthogonalEntitiesFromTeam(target, game.getEnemyTeamID(), true);
             return ADVANCE_STEPS_FACTOR * steps - enemies;
         }
         if (targetEntity.getOwner().equals(currentTeam)) {
@@ -341,7 +342,7 @@ public final class AIDecisionService {
             if (targetUnit.isBlocked()) {
                 return unit.getAtk() - targetUnit.getDef();
             }
-            return DUEL_FACTOR * (unit.getAtk() - targetUnit.getAtk());
+            return DUEL_FACTOR * (unit.getAtk() - targetUnit.getDef());
         }
     }
     private int scoreBlockAction(Position source, Unit unit, TeamID currentTeam) {
